# obus

./: .gitignore  .ocamlformat  .project  .travis.yml  CHANGES  CHANGES.md  LICENSE  META  META.in  Makefile  README  README.md  _oasis  _tags  apiref-intro  boring  check-deps.sh  clean.sh  compile-samples.sh  compile-tools.sh  compile.sh  dist  dune  dune-project  hal.mllib  install.sh  lib.itarget  make-doc.sh  myocamlbuild.ml  name_translator.ml  notification.mllib  oBus_config.ml  obus-api.odocl  obus-binding.mllib  obus-network-manager.opam  obus-notification.opam  obus-policykit.opam  obus-thread.mllib  obus-udisks.opam  obus-upower.opam  (+19 more)
.github/: CODEOWNERS
benchmark/: benchmark_ocaml.ml
binder/: _tags  abstractCode.mli  binder.ml  binder.mli  btypes.ml  btypes.mli  caml.ml  caml.mli  codeConstants.ml  codeConstants.mli  compile.ml  compile.mli  dBus.ml  dBus.mli  env.ml  env.mli  gen-header-rw.ml  gen-message-rw.ml  gen-values-rw.ml  genCode.ml  genCode.mli  genImplem.ml  genImplem.mli  genInterf.ml  genInterf.mli  genSerializer.ml  genSerializer.mli  generate.ml  generate.mli  helpers.ml  helpers.mli  instruction.mli  interface.ml  interface.mli  introspect.ml  introspect.mli  language.mli  lmap.ml  lmap.mli  log.ml  (+35 more)
bindings/network-manager/: dune  network-manager.mllib  nm_access_point.ml  nm_access_point.mli  nm_connection.ml  nm_connection.mli  nm_device.ml  nm_device.mli  nm_dhcp4_config.ml  nm_dhcp4_config.mli  nm_interfaces.obus  nm_interfaces.xml  nm_ip4_config.ml  nm_ip4_config.mli  nm_ip6_config.ml  nm_ip6_config.mli  nm_manager.ml  nm_manager.mli  nm_monitor.ml  nm_monitor.mli  nm_ppp.ml  nm_ppp.mli  nm_settings.ml  nm_settings.mli  nm_vpn_connection.ml  nm_vpn_connection.mli  nm_vpn_plugin.ml  nm_vpn_plugin.mli  obus-network-manager.mllib
bindings/notification/: dune  notification.ml  notification.mli  notification.mllib  notification_interfaces.ml  notification_interfaces.mli  notification_interfaces.obus  notification_interfaces.xml  obus-notification.mllib
bindings/policykit/: dune  obus-policykit.mllib  policy_kit.ml  policy_kit.mli  policy_kit_interfaces.ml  policy_kit_interfaces.mli  policy_kit_interfaces.obus  policy_kit_interfaces.xml  policykit.mllib
bindings/udisks/: dune  obus-udisks.mllib  uDisks.ml  uDisks.mli  uDisks_adapter.ml  uDisks_adapter.mli  uDisks_device.ml  uDisks_device.mli  uDisks_expander.ml  uDisks_expander.mli  uDisks_interfaces.ml  uDisks_interfaces.mli  uDisks_interfaces.obus  uDisks_interfaces.xml  uDisks_monitor.ml  uDisks_monitor.mli  uDisks_port.ml  uDisks_port.mli  udisks.mllib
bindings/upower/: dune  obus-upower.mllib  uPower.ml  uPower.mli  uPower_device.ml  uPower_device.mli  uPower_interfaces.ml  uPower_interfaces.mli  uPower_interfaces.obus  uPower_interfaces.xml  uPower_monitor.ml  uPower_monitor.mli  uPower_policy.ml  uPower_policy.mli  uPower_wakeups.ml  uPower_wakeups.mli  upower.mllib
common/: common.ml  common.mli  commonTypes.ml  common_util.ml  common_util.mli  common_util_implem.ml  common_util_interf.mli  constant.ml  constant.mli  util.ml  util.mli  wireTypes.ml
examples/: battery_monitoring.ml  bus_functions.ml  dune  eject.ml  hello.ml  list_services.ml  monitor.ml  network_manager.ml  network_state.ml  notify.ml  ping.ml  pong.ml  progress_client.ml  progress_server.ml  signals.ml
interfaces/: avahi.xml  hal.xml  introspectable.xml
man/: dune  obus-binder.1  obus-dump.1  obus-gen-client.1  obus-gen-interface.1  obus-gen-server.1  obus-idl2xml.1  obus-introspect.1  obus-xml2idl.1
manual/: Makefile  _tags  caml_code.ml  caml_code.mli  colorize.ml  colorize.mli  htmlize.sh  manual.mlt  manual.tex  myocamlbuild.ml  notification.ml
obus/: DBus.xml  OBus.ml  OBus.mli  OBus.mlpack  OBus_thread.ml  OBus_thread.mli  _tags  addrLexer.mll  addr_lexer.mll  address.ml  address.mli  auth.ml  auth.mli  authLexer.mll  auth_command.ml  auth_lexer.mll  bus.ml  bus.mli  cache.mli  connection.ml  connection.mli  constant.ml  cookie.ml  cookie.mli  dbus.map.xml  error.ml  error.mli  header.ml  header.mli  info.ml  info.mli  interface.ml  interface.mli  internal.mlpack  introspect.ml  lock.ml  lock.mli  log.ml  log.mli  lowLevel.ml  (+130 more)
samples/: avahi-list-workstations.ml  avahi_list_workstations.ml  bus-functions.ml  bus_functions.ml  dumper.ml  dumper.mli  eject.ml  hello.ml  list-services.ml  list_services.ml  monitor.ml  notif.ml  notify.ml  ping.ml  pong.ml  progress-test.ml  progress.ml  progress_client.ml  progress_server.ml  progress_test.ml  signals.ml
src/: META  META.~1~  META.~2~  META.~3~  META.~4~  META.~5~  dune  oBus_address.ml  oBus_address.mli  oBus_address_lexer.mll  oBus_auth.ml  oBus_auth.mli  oBus_bus.ml  oBus_bus.mli  oBus_config.ml  oBus_config.ml.ab  (+68 more)
src/protocol/: dune  oBus_address.ml  oBus_address.mli  oBus_auth.mli  oBus_connection.ml  oBus_connection.mli  oBus_error.ml  oBus_error.mli  oBus_info.mli  oBus_interfaces.obus  oBus_match.ml  oBus_match.mli  oBus_match_rule_lexer.mll  oBus_method.mli  oBus_object.ml  oBus_peer.ml  oBus_peer.mli  oBus_property.ml  oBus_property.mli  oBus_proxy.ml  oBus_proxy.mli  oBus_resolver.mli  oBus_server.ml  oBus_signal.ml  oBus_transport.ml  oBus_uuid.ml  oBus_wire.ml
tools/: common.ml  dune  idl.ml  idl.mli  obus-binder.ml  obus-dump.ml  obus-introspect.ml  obus_binder.ml  obus_dump.ml  obus_gen_client.ml  obus_gen_interface.ml  obus_gen_server.ml  obus_idl2xml.ml  obus_introspect.ml  obus_xml2idl.ml  print.ml  term.ml  utils.ml  utils.mli
tools/introspection/: dune  obus_introspect.ml
tools/tools_util/: dune  utils.ml  utils.mli
tools/transformers/: dune  obus_gen_client.ml  obus_gen_interface.ml  obus_gen_server.ml
utils/: dune  obus-mode.el  obus_dump.ml  obus_gen_client.ml  obus_gen_interface.ml  obus_gen_server.ml  obus_introspect.ml  style.css
utils/common/: dune  term.ml  utils.ml  utils.mli
utils/doc/: apiref-intro
utils/introspection/: dune  obus_dump.ml
utils/scripts/: cpufreq-performance  cpufreq-powersave  multimedia-keys  power-hibernate  power-reboot  power-shutdown  power-suspend
utils/transformers/: dune
(+182 files in other folders)
