opam-version: "2.0"

name: "obus-upower"
synopsis: "Pure Ocaml implementation of the D-Bus protocol"
maintainer: "freyrnjordrson@gmail.com"
authors: [ "Jérémie Dimino" ]
homepage: "https://github.com/ocaml-community/obus"
bug-reports: "https://github.com/ocaml-community/obus/issues"
dev-repo: "git+https://github.com/ocaml-community/obus.git"
license: "BSD3"

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "dune" {>= "1.1"}
  "obus"
  "obus-utils"
]
