opam-version: "2.0"

name: "obus"
synopsis: "Pure Ocaml implementation of the D-Bus protocol"
maintainer: "freyrnjordrson@gmail.com"
authors: [ "Jérémie Dimino" ]
homepage: "https://github.com/ocaml-community/obus"
bug-reports: "https://github.com/ocaml-community/obus/issues"
dev-repo: "git+https://github.com/ocaml-community/obus.git"
license: "BSD3"

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "dune" {>= "1.1"}
  "menhir" {build}
  "xmlm"
  "lwt" {>= "5.0.0"}
  "lwt_ppx"
  "lwt_log"
  "lwt_react"
  "ocaml-migrate-parsetree"
  "ppxlib"
]
