opam-version: "2.0"
version: "1.2.5"
synopsis: "Pure Ocaml implementation of the D-Bus protocol"
maintainer: "freyrnjordrson@gmail.com"
authors: [ "Jérémie Dimino" ]
homepage: "https://github.com/ocaml-community/obus"
bug-reports: "https://github.com/ocaml-community/obus/issues"
dev-repo: "git+https://github.com/ocaml-community/obus.git"
license: "BSD-3-Clause"

build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocaml" {>= "4.07"}
  "dune" {>= "1.4"}
  "menhir" {build & >= "20180528"}
  "xmlm"
  "lwt" {>= "4.3.0"}
  "lwt_ppx"
  "lwt_log"
  "lwt_react"
  "ppxlib" {>= "0.26.0"}
]
