(executable
 (name obus_gen_interface)
 (public_name obus-gen-interface)
 (package obus-utils)
 (modules obus_gen_interface)
 (libraries obus_utils_common))

(executable
 (name obus_gen_client)
 (public_name obus-gen-client)
 (package obus-utils)
 (modules obus_gen_client)
 (libraries obus_utils_common))

(executable
 (name obus_gen_server)
 (public_name obus-gen-server)
 (package obus-utils)
 (modules obus_gen_server)
 (libraries obus_utils_common))

(executable
 (name obus_dump)
 (public_name obus-dump)
 (package obus-utils)
 (modules obus_dump)
 (libraries obus)
 (preprocess
  (pps lwt_ppx)))

(executable
 (name obus_introspect)
 (public_name obus-introspect)
 (package obus-utils)
 (modules obus_introspect)
 (libraries obus)
 (preprocess
  (pps lwt_ppx)))
