(executables
  (names        obus_gen_interface
                obus_gen_client
                obus_gen_server)
  (public_names obus-gen-interface
                obus-gen-client
                obus-gen-server)
  (modules      obus_gen_interface
                obus_gen_client
                obus_gen_server)
  (package      obus_utils)
  (libraries    tools_util
                obus.internals))